Changed the folder structure to cater for hosting by firebase

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | BioCWT</title>
     <!-- Link for the css file -->
-    <link rel="stylesheet" href="./styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Link for the google fonts used -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -173,7 +173,7 @@
     </footer>
 
     <!-- Links for the js -->
-    <script src="./script.js"></script>
+    <script src="/js/script.js"></script>
     <!-- Link for the aos -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
